# elena-lang

./: .gitignore  .mailmap  BSDmakefile  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  elena-lang.workspace.mak  elena.workspace  elena.workspace.layout  install.bat  lib_tests.bat  license.txt  makefile  readme.txt  readmerus.txt  rebuild.bat  rebuild.script  rebuild40.bat  rebuild_examples.bat  rebuild_examples.script  rebuild_examples60.bat  rebuild_lib.bat  rebuild_lib.script  rebuild_lib60.bat  rebuild_lib60_x32.bat  rebuild_lib60_x64.bat  rebuild_lib60_x86.bat  rebuildall.bat  recompile.bat  recompile.script  recompile15.bat  recompile19.bat  recompile60.bat  release.bat  vs_release.bat  vs_release15.bat  (+3 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflow/: ci_i386.yml
.github/workflows/: bsd.make.yml  bsd.nightly.yml  lnx.nightly.yml  mac.nightly.yml  make.yml  msbuild.yml  nightly.yml
asm/aarch64/: core60.asm  core60_client.asm  core60_lnx.asm
asm/amd64/: core.asm  core60.asm  core60_client.asm  core60_lnx.asm  core60_win.asm  core60_win_client.asm  core_win.asm  coreapi.asm  corex60.asm  corex60_win.asm
asm/power64/: core.asm
asm/ppc207_64/: core.asm
asm/ppc64le/: core.asm  core60.asm  core60_client.asm  core60_lnx.asm
asm/x32/: core.asm  core2.asm  core60.asm  core60_client.asm  core60_lnx.asm  core60_win.asm  core60_win_client.asm  core_lnx.asm  core_vm.asm  core_win.asm  coreapi.asm  corex.asm  corex60.asm  corex60_win.asm
dat/api2html/: api2html.bat  elena.txt  extadapters.txt  extensions.txt  extensions_math.txt  extensions_text.txt  extguicontrols.txt  extguidictionary.txt  extio.txt  extpatterns.txt  exttext.txt  guicommon.txt  guicontrols.txt  guidictionary.txt  guiforms.txt  guigraphics.txt  guiprotocol.txt  protocol.txt  stdbasic.txt  stdcollections.txt  stddictionary.txt  stdmath.txt  stdmemory.txt  stdpatterns.txt  stdprotocol.txt  sysdictionary.txt  sysentries.txt  sysevents.txt  sysprotocol.txt  system.txt  system_calendar.txt  system_collections.txt  system_dynamic.txt  system_io.txt  system_math.txt  system_routines.txt  system_text.txt  win32api.txt  win32applications.txt  win32controls.txt  (+5 more)
dat/og/: bc_rules60.txt  bt_rules.txt  bt_rules60.txt  bt_xrules60.txt  rules.txt  source_rules.txt
dat/sg/: sg.bat  syntax.txt  syntax50.txt  syntax60.txt  syntax67.txt  syntax_rus.txt
doc/: LICENSE  contributors  features  knownbugs.txt  planning.txt  readme.txt  roadmap.txt  todo.txt  whatsnew_old.txt
doc/api/: algorithms-summary.html  algorithms.html  api2html.bat  cellular-summary.html  cellular.html  create.bat  dejavu.css  elena-summary.html  elena.html  extadapters-summary.html  extadapters.html  extensions-dynamic-expressions-summary.html  extensions-dynamic-expressions.html  extensions-dynamic-summary.html  extensions-dynamic.html  extensions-io-summary.html  extensions-io.html  extensions-math-summary.html  extensions-math.html  extensions-routines-stex-summary.html  extensions-routines-stex.html  extensions-routines-summary.html  extensions-routines.html  extensions-runtime-summary.html  extensions-runtime.html  extensions-scripting-summary.html  extensions-scripting.html  extensions-summary.html  extensions-text-summary.html  extensions-text.html  extensions-threading-summary.html  extensions-threading.html  extensions.html  extensions_math-summary.html  extensions_math.html  extensions_text-summary.html  extensions_text.html  extguicontrols-summary.html  extguicontrols.html  extguidictionary-summary.html  (+130 more)
doc/lang/: api.txt  dictionary.txt  faq.txt  manual.md  spec.txt
doc/tech/: bytecode.txt  bytecode60.txt  engine.txt  knowhow.txt  knowhow60
doc/web/: index.html
elenasrc2/: elenasrc2.sln  elenasrc2_64.sln
elenasrc2/common/: altstrings.cpp  altstrings.h  common.h  config.cpp  config.h  dump.cpp  dump.h  files.cpp  files.h  lists.h  streams.h  tools.h  xmlreader.cpp  xmlreader.h
elenasrc2/elc/: bcwriter.cpp  bcwriter.h  compiler.cpp  compiler.h  compilercommon.h  compilerscope.cpp  compilerscope.h  derivation.cpp  derivation.h  elc.h  errors.h  image.cpp  image.h  parser.cpp  parser.h  project.cpp  project.h  separser.cpp  separser.h  source.cpp  source.h  syntax.h  syntaxtree.cpp  syntaxtree.h
elenasrc2/elc/cmake/: CMakeLists.txt
elenasrc2/elenagm/: model.cpp  model.h  widget.h
elenasrc2/elenagm/cmake/: CMakeLists.txt
elenasrc2/elenart/: elenartmachine.cpp  elenartmachine.h  instance.cpp  instance.h
elenasrc2/elenart/cmake/: CMakeLists.txt
elenasrc2/elenasm/: cfparser.cpp  cfparser.h  inlineparser.cpp  inlineparser.h  scriptengine.h  scriptparser.cpp  scriptparser.h  session.cpp  session.h  transformer.cpp  transformer.h  treeparser.cpp  treeparser.h
elenasrc2/elenasm/cmake/: CMakeLists.txt
elenasrc2/elenavm/: elenamachine.cpp  elenamachine.h  elenavmachine.cpp  elenavmachine.h
elenasrc2/elenavm/cmake/: CMakeLists.txt
elenasrc2/engine/: amd64helper.cpp  amd64helper.h  amd64jitcompiler.cpp  amd64jitcompiler.h  bytecode.cpp  bytecode.h  compilercommon.h  core.h  (+38 more)
elenasrc2/ide/cmake/: CMakeLists.txt
elenasrc2/tools/api2html/cmake/: CMakeLists.txt
elenasrc2/tools/asm2bin/cmake/: CMakeLists.txt
elenasrc2/tools/elt/cmake/: CMakeLists.txt
elenasrc3/: elena.workspace  elenasrc3.sln
examples/: rebuild_examples.script
examples60/: examples60.linux.prjcol  examples60.prjcol  rosetta60.linux.prjcol  rosetta60.prjcol
install/: build_package.bat  build_package.script  build_package_amd64.script  build_package_arm64.script  build_package_i386.script  build_package_ppc64le.script  build_package_x64.bat  build_package_x86.bat  control  elena-5.0.1.i386-linux.deb  elena-5.0.2.i386-linux.deb  elena_inno.iss  install.script  release.script
rosetta/: build.bat  copy.bat
scripts/: create_package_x64.bat  create_package_x86.bat  rebuild_data60_x64.bat  rebuild_data60_x86.bat  rebuild_lib60_x64.bat  rebuild_lib60_x86.bat
src50/: system.prj  types.l
src60/: elena_api.linux.prjcol  elena_api.prjcol
tests60/: tests60.prjcol
(+2686 files in other folders)
